--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="CommandHandler.cs" />
     <Compile Include="ClientHandler.cs" />
+    <Compile Include="SendCommand.cs" />
     <Compile Include="ScreenshotExpire.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Log.cs" />
